--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap');
 
 
 
@@ -13,6 +14,7 @@
 h1{
 color: var(--grey);
 text-align: center;
+font-family:'Fredericka the Great', cursive;
 }
 
 p{
