--- a/Style.css
+++ b/Style.css
@@ -15,7 +15,7 @@
 }
 
 
-.blog-h1 {
+h1 {
     font-family: 'Fredericka the Great';
     font-size: 50px;
     font-weight: 100;
@@ -23,6 +23,6 @@
     text-align: center;
 }
 
-.blog-h2 {
+h2 {
     font-family: 'El messiri';
 }
