--- a/Style.css
+++ b/Style.css
@@ -16,3 +16,30 @@ h1{
     text-align: center;
     color: var(--grey);
 }
+
+.artworks_sketches{
+    text-align: center;
+    color: var(--grey);
+    background-color: var(--blue);
+    padding: 15px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.artworks_cartoon{
+    text-align: center;
+    color: var(--grey);
+    background-color: var(--light-blue);
+    padding: 15px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.artworks_digital{
+    text-align: center;
+    color: var(--grey);
+    background-color: var(--blue);
+    padding: 15px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
