--- a/Style.css
+++ b/Style.css
@@ -29,6 +29,7 @@ color: var(--grey);
 }
 
 .om-os h2{
+    text-align: center;
 
 }
 
@@ -39,4 +40,8 @@ color: var(--grey);
 
 .plan{
    background-color: var(--light-blue); 
+}
+
+.plan img{
+    display: float;
 }
